fix overflow mobile device

--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -13,11 +13,14 @@ html {
   box-sizing: inherit;
 }
 
+.loader {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
   line-height: 1.3;
   font-family: 'Poppins', sans-serif;
-  overflow-x: hidden;
   cursor: none;
 }
