--- a/scss/index.css
+++ b/scss/index.css
@@ -18,12 +18,15 @@ html {
   box-sizing: inherit;
 }
 
+.loader {
+  overflow: hidden;
+}
+
 body {
   margin: 0;
   padding: 0;
   line-height: 1.3;
   font-family: "Poppins", sans-serif;
-  overflow-x: hidden;
   cursor: none;
 }
 
